--- a/index.html
+++ b/index.html
@@ -202,6 +202,86 @@
             color: #007BFF;
         }
 
+        /* Responsividade */
+        @media (max-width: 768px) {
+            .header {
+                top: 10px;
+                right: 10px;
+                flex-direction: column;
+                align-items: flex-end;
+            }
+
+            .header a {
+                font-size: 16px;
+                padding: 8px 16px;
+            }
+
+            .whatsapp-icon {
+                top: 10px;
+                left: 10px;
+                font-size: 36px;
+            }
+
+            .text-container {
+                top: 60px;
+                width: 90%;
+                padding: 5px;
+            }
+
+            .text-explanation {
+                top: 120px;
+                width: 90%;
+                padding: 40px 10px;
+                font-size: 14px;
+            }
+
+            #trabalhos {
+                top: 120px;
+                width: 90%;
+                padding: 20px;
+            }
+
+            .trabalho {
+                width: 100%;
+                height: auto;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .header a {
+                font-size: 14px;
+                padding: 6px 12px;
+            }
+
+            .whatsapp-icon {
+                font-size: 30px;
+            }
+
+            .text-container {
+                top: 40px;
+                width: 95%;
+            }
+
+            .text-explanation {
+                top: 80px;
+                width: 95%;
+                padding: 20px 5px;
+                font-size: 12px;
+            }
+
+            #trabalhos {
+                top: 80px;
+                width: 95%;
+                padding: 10px;
+            }
+
+            .trabalho {
+                width: 100%;
+                height: auto;
+            }
+        }
+
+
 
     </style>
 </head>
