--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
             background-position: center;
             background-repeat: no-repeat;
             background-attachment: fixed;
+            transition: background-size 0.5s ease, background-position 0.5s ease;
             margin: 0;
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
