--- a/index.html
+++ b/index.html
@@ -143,27 +143,37 @@
             padding-top: 60px;
             position: relative;
         }
+
+
         .header {
             position: absolute;
             top: 20px;
-            right: 30px;
-            z-index: 2;
+            right: 20px;
             display: flex;
             gap: 10px;
+            flex-wrap: wrap; /* Permite que os itens se movam para a linha seguinte se não houver espaço suficiente */
+            justify-content: flex-end; /* Alinha os itens à direita */
+            z-index: 2;
         }
+
         .header a {
             color: white;
             text-decoration: none;
-            font-size: 18px;
+            font-size: 16px;
             padding: 10px 20px;
             border-radius: 5px;
             font-family: 'Arial', sans-serif;
             font-weight: bold;
+            background-color: rgba(0, 0, 0, 0.5); /* Adicione um fundo semi-transparente para melhor visibilidade */
             transition: background-color 0.3s, color 0.3s;
         }
+
         .header a:hover {
-            color: #000000;
+            background-color: rgba(0, 0, 0, 0.8);
+            color: #ffffff;
         }
+
+        
         .contact-link {
             background-color: #007bff;
         }
