--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             right: 20px;
             display: flex;
             gap: 10px;
-            flex-wrap: wrap; /* Permite que os itens se movam para a linha seguinte se não houver espaço suficiente */
+            flex-wrap: nowrap; /* Garante que os itens fiquem em uma linha */
             justify-content: flex-end; /* Alinha os itens à direita */
             z-index: 2;
         }
@@ -171,6 +171,33 @@
         .header a:hover {
             background-color: rgba(0, 0, 0, 0.8);
             color: #ffffff;
+        }
+        /* Media query para telas pequenas */
+        @media (max-width: 576px) {
+            .header {
+                position: static; /* Remove o posicionamento absoluto */
+                justify-content: center; /* Centraliza os itens horizontalmente */
+                flex-wrap: nowrap; /* Garante que os itens fiquem em uma linha */
+                padding: 10px 0; /* Adiciona padding para melhorar a aparência */
+            }
+
+            .header a {
+                font-size: 14px; /* Reduz o tamanho da fonte para telas menores */
+                padding: 8px 15px; /* Ajusta o padding para telas menores */
+            }
+        }
+
+        /* Media query para telas médias */
+        @media (min-width: 576px) and (max-width: 768px) {
+            .header {
+                position: static; /* Remove o posicionamento absoluto */
+                justify-content: center; /* Centraliza os itens horizontalmente */
+                flex-wrap: nowrap; /* Garante que os itens fiquem em uma linha */
+            }
+
+            .header a {
+                font-size: 16px; /* Ajusta o tamanho da fonte para telas médias */
+            }
         }
 
         
