--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
             cursor: pointer;
             user-select: none;
             transition: color 0.3s;
+            padding: 10px;
         }
         .arrow:hover {
             color: #555;
@@ -275,10 +276,12 @@
         .arrow-left {
             position: absolute;
             left: 10px;
+            padding: 10px;
         }
         .arrow-right {
             position: absolute;
             right: 10px;
+            padding: 10px;
         }
 
                 /* Estilo para a seção de trabalhos */
