--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
             .text-container, .text-explanation, #trabalhos {
                 top: 40px;
                 padding: 10px;
+                margin-left: 10px;
+                margin-right: 10px;
             }
 
             .trabalho {
@@ -73,6 +75,8 @@
 
             .text-container, .text-explanation, #trabalhos {
                 padding: 5px;
+                margin-left: 10px;
+                margin-right: 10px;
             }
 
             .whatsapp-icon img {
@@ -237,6 +241,8 @@
             left: 50%;
             transform: translateX(-50%);
             text-align: justify;
+            margin-left: 10px;
+            margin-right: 10px;
         }
         .text-explanation {
             top: 200px; /* Ajuste conforme necessário para evitar sobreposição */
