--- a/index.html
+++ b/index.html
@@ -102,6 +102,13 @@
             font-size: 1rem;
         }
 
+        #text {
+            margin: 0 30px; /* Ajuste o espaçamento horizontal entre o texto e as setas */
+            font-size: 18px; /* Ajuste o tamanho do texto conforme necessário */
+            font-family: 'Arial', sans-serif;
+            color: #333; /* Ajuste a cor do texto conforme necessário */
+        }
+
         /* Estilos específicos para dispositivos móveis */
         @media (max-width: 768px) {
             .button-container {
